--- a/svg.html
+++ b/svg.html
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-0.01 0.03 339.98 220.92" style="width: 100%;">
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-0.01 0.03 339.98 220.92" style="width: 100%; min-width: 100%;">
   <defs>
     <clipPath id="clip-path">
       <rect id="Rectangle_514" data-name="Rectangle 514" width="340" height="220.973" fill="none"/>
