--- a/svg.html
+++ b/svg.html
@@ -1,4 +1,4 @@
-<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="1138" height="764" viewBox="0 0 1138 764" style="width: 100% min-width: 100%; max-width: 100%">
+<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="1138" height="764" viewBox="0 0 1138 764" class="map_svg" style="width: 100% min-width: 100%; max-width: 100%">
   <defs>
     <clipPath id="clip-path">
       <rect id="Rectangle_514" data-name="Rectangle 514" width="1137.552" height="739.318" fill="none"/>
